syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "LeaderUpdatedResponse";

message LeaderUpdatedResponseDetails {
  int32 messageId = 1;
  bool updateSuccessful = 2;
}