syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "RequestLeaderInfo";

message RequestLeaderInfoDetails {
  int32 messageId = 1;
  string requestSenderType = 2;
  string requestSenderName = 3;
}